Header component done

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -7,4 +7,4 @@ $button-disabled-color: #b4b4b4;
 $input-color: #d0cfcf;
 $input-label-color: #7e7e7e;
 $input-error-color: #cb3d40;
-$text-basic-color: rgba(0, 0, 0, 0.87);
+$text-basic-color: #000000de;
