--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,5 +1,5 @@
-@import "../../styles/colors.scss";
-@import "../../styles/mixins.scss";
+@import "../../styles/utils/colors.scss";
+@import "../../styles/utils/mixins.scss";
 
 .heroContainer {
   padding-top: 40px;
