--- a/src/styles/base/general.scss
+++ b/src/styles/base/general.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito&family=Oswald&display=swap");
-@import "./colors.scss";
+@import "../utils/colors.scss";
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Nunito", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
@@ -14,4 +14,36 @@ body {
 
   // for fixed header
   padding-top: 60px;
+}
+
+p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+}
+h1 {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1;
+  text-align: center;
+}
+
+.global-container {
+  margin: 0 auto;
+  padding: 0 10px;
+
+  @media (min-width: 768px) {
+    padding: 0 32px;
+  }
+
+  @media (min-width: 1024px) {
+    max-width: 1024px;
+    padding: 0 60px;
+  }
+
+  @media (min-width: 2560px) {
+    max-width: 1170px;
+    padding: 0;
+  }
 }
