--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   border-radius: 80px;
   background-color: $primary-color;
-  transition: background-color 250ms;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   &:hover,
   &:active {
