--- a/src/styles/base/general.scss
+++ b/src/styles/base/general.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito&family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500&display=swap");
 @import "../utils/colors.scss";
 
 body {
