--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -1,6 +1,7 @@
 @import "./colors.scss";
 
 @mixin button {
+  height: 34px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
