--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -5,22 +5,26 @@
   padding-top: 40px;
   padding-bottom: 71px;
 
-  background-image: url("/images/hero_background_mobile.png");
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/images/hero_background_mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
   @media (min-width: 768px) {
     padding: 88px 194px;
-    background-image: url("/images/hero_background_tablet.png");
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("/images/hero_background_tablet.jpg");
   }
   @media (min-width: 1024px) {
     padding: 164px 322px;
-    background-image: url("/images/hero_background_pc.png");
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("/images/hero_background_pc.jpg");
   }
   @media (min-width: 2560px) {
     padding: 164px 395px;
-    background-image: url("/images/hero_background_max.png");
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("/images/hero_background_max.jpg");
   }
 }
 
